@@ -1,3 +1,12 @@
+2008-06-02  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* src/trackerd/tracker-db-sqlite.c:
+	* src/trackerd/tracker-xesam-manager.c:
+	* src/trackerd/tracker-xesam-manager.h:
+
+	Waking up the LiveSearches for not-yet refactored methods that also
+	(still) insert, delete and update the database
+
 2008-06-02  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/Makefile.am:
